readme.md was modified, scrollbar bug was fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow: auto;
+}
+
 body {
   display: flex;
   justify-content: center;
